# augur

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE-OVERVIEW.md  CLAUDE.md  CODE-MIGRATION-PLAN.md  CONSTITUTIONAL-ROLLOUT-PLAN.md  GROUNDING-MAP.md  HANDOFF-governance.md  HANDOFF.md  LAYER-SEALING-SCHEDULE.md  LICENSE  README.md  ULTRACODE-SCHEDULE.md  audit_selfheal.sh  audit_watchdog.sh  import_database.sh  install_services.sh  pyproject.toml  read_handoff.py  requirements-mcp.txt  resume_project.sh  start_chat.sh  sync_from_github.sh  sync_memory.py  sync_memory.sh
.cursor/: mcp.json
.github/: README.md
audits/: AGENT-RUNTIME-THREE-MIRROR-REVIEW-2026-07-18.md  AUD-02-VERIFY-CHECKLIST-20260723.md  CODE-COMPLIANCE-AUDIT-2026-07-16.md  COGNITIVE-KERNEL-THREE-MIRROR-REVIEW-2026-07-18.md  DB-PREDICT-N2-PARALLEL-20260724.md  DOMAIN-CS-P2-20260723.md  G-PME-SOUL-CLOSED-20260724.md  G-PME-SOUL-DRAFT-20260724.md  GOV-MAP-PLAN-D-20260723.md  IDENTITY-THREE-MIRROR-REVIEW-2026-07-18.md  KNOWLEDGE-SYSTEM-THREE-MIRROR-REVIEW-2026-07-18.md  L0-L7-INTERACTION-ULTRACODE-2026-07-23.md  L1-WM-ULTRACODE-20260723-run1-recovered.md  L1-WM-ULTRACODE-20260723.md  L2-ONT-ULTRACODE-20260723.md  L3-ID-ULTRACODE-20260723.md  L4-KS-ULTRACODE-20260723.md  L5-8.2-REVIEW-PACKAGE-20260723.md  L5-CK-ULTRACODE-20260723.md  L5-L7-INTERACTION-ULTRACODE-20260723.md  L6-AR-ULTRACODE-20260723.md  L7-INF-ULTRACODE-20260723.md  L7-REREVIEW-2026-07-18.md  MC-THREE-MIRROR-REVIEW-2026-07-18.md  MC-TOOL-HYGIENE-20260723.md  MC-ULTRACODE-L0-20260723.md  MC-V1.6-MINIMAL-20260723.md  P2H-ULTRACODE-20260724.md  (+56 more)
(+882 files in other folders)
